--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,10 @@
+// Root-level build.gradle
+
+// Google Services plugin version 4.4.2, apply false (global kullanım için)
+plugins {
+    id("com.google.gms.google-services") version "4.4.2" apply false
+}
+
 allprojects {
     repositories {
         google()
